[metadata]
name = clyo
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://cameleon.univ-lyon1.fr/ovincent/clyo
description = Command line interface to control objects in real time
long_description = file: README.md
long_description_content_type = text/markdown
keywords = command, line, interface
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
